@@ -21,7 +21,7 @@ log4j.rootLogger=${gora.root.logger}
 
 # Define some default values that can be overridden by system properties
 # Logging Threshold
-log4j.threshhold=WARN
+log4j.threshhold=ALL
 
 #
 # Daily Rolling File Appender
@@ -51,8 +51,8 @@ log4j.appender.console.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 #log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}: %m%n
 log4j.appender.console.layout.ConversionPattern=%-5p %-30.30c{2} - %m%n
-# Custom Logging levels
 
+# Custom Logging levels
 log4j.logger.net.sf.jml=WARN
 log4j.logger.org.apache=WARN
-log4j.org.apache.gora=INFO
+log4j.logger.org.apache.gora=INFO
